--- a/templates/partials/header.phtml
+++ b/templates/partials/header.phtml
@@ -114,3 +114,5 @@
 
 <script src="/js/header.js" defer></script>
 <script src="/js/search.js" defer></script>
+
+<link rel="stylesheet" href="/css/header-footer.css"/>
