--- a/templates/leaderboard-total.phtml
+++ b/templates/leaderboard-total.phtml
@@ -6,61 +6,83 @@
     <title>Classement - Kr[HACK]ademy</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/content-page.css">
+    <link rel="stylesheet" href="/css/leaderboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
 </head>
 <body>
 
     <main class="content-container">
         <div class="content-wrapper">
+
             <div class="content-header">
                 <i class="content-icon fas fa-trophy"></i>
                 <div class="content-title-group">
-                    <h1>Classement Complet</h1>
+                    <h1>Classement</h1>
                     <p class="content-intro">Mesurez-vous à la communauté. Chaque drapeau capturé vous rapproche du sommet !</p>
                 </div>
             </div>
 
             <div class="content-block">
-                <div class="leaderboard-container">
-                    <div class="leaderboard__header">
-                        <span>Rang</span>
-                        <span>Utilisateur</span>
-                        <span>Score</span>
-                    </div>
-    
-                    <ol class="leaderboard__list">
-                        <?php foreach ($leaderboardData as $index => $user): ?>
-                            <?php
-                                $rank = $index + 1;
-                                $isCurrentUser = ($user['id'] == $currentUserId);
-                                $podiumClass = '';
-                                if ($rank >= 1 && $rank <= 3) {
-                                    $podiumClass = 'leaderboard__row--podium-' . $rank;
-                                }
-                            ?>
-                            <li class="leaderboard__row <?php echo $podiumClass; ?> <?php echo $isCurrentUser ? 'leaderboard__row--current-user' : ''; ?>">
-                            
-                                <span class="leaderboard__cell leaderboard__cell--rank">
-                                    <span class="rank-number"><?php echo $rank; ?></span>
-                                </span>
-                            
-                                <span class="leaderboard__cell leaderboard__cell--user">
-                                    <?php if ($rank <= 3): ?>
-                                        <i class="fas fa-medal"></i>
-                                    <?php endif; ?>
-                                    <?php echo htmlspecialchars($user['username']); ?>
-                                </span>
-                                    
-                                <span class="leaderboard__cell leaderboard__cell--score">
-                                    <?php echo $user['score']; ?> pts
-                                </span>
-                            </li>
-                        <?php endforeach; ?>
-                    </ol>
+
+                <?php 
+                    $podiumUsers = array_slice($leaderboardData, 0, 3);
+                    $otherUsers = array_slice($leaderboardData, 3);
+                ?>
+
+                <div class="podium-container">
+                    <?php if (isset($podiumUsers[1])): $user = $podiumUsers[1]; ?>
+                        <div class="podium-card podium-card--2 <?php echo ($user['id'] == $currentUserId) ? 'podium-card--current-user' : ''; ?>">
+                            <div class="podium-rank">2</div>
+                            <i class="podium-icon fas fa-medal"></i>
+                            <div class="podium-user"><?php echo htmlspecialchars($user['username']); ?></div>
+                            <div class="podium-score"><?php echo $user['score']; ?> pts</div>
+                        </div>
+                    <?php endif; ?>
+
+                    <?php if (isset($podiumUsers[0])): $user = $podiumUsers[0]; ?>
+                        <div class="podium-card podium-card--1 <?php echo ($user['id'] == $currentUserId) ? 'podium-card--current-user' : ''; ?>">
+                            <div class="podium-rank">1</div>
+                            <i class="podium-icon fas fa-trophy"></i>
+                            <div class="podium-user"><?php echo htmlspecialchars($user['username']); ?></div>
+                            <div class="podium-score"><?php echo $user['score']; ?> pts</div>
+                        </div>
+                    <?php endif; ?>
+
+                    <?php if (isset($podiumUsers[2])): $user = $podiumUsers[2]; ?>
+                        <div class="podium-card podium-card--3 <?php echo ($user['id'] == $currentUserId) ? 'podium-card--current-user' : ''; ?>">
+                            <div class="podium-rank">3</div>
+                            <i class="podium-icon fas fa-medal"></i>
+                            <div class="podium-user"><?php echo htmlspecialchars($user['username']); ?></div>
+                            <div class="podium-score"><?php echo $user['score']; ?> pts</div>
+                        </div>
+                    <?php endif; ?>
                 </div>
+            </div>
+
+            <div class="content-block">
+                <div class="leaderboard-table">
+                    <div class="leaderboard-header">
+                        <span class="leaderboard-cell">Rang</span>
+                        <span class="leaderboard-cell">Utilisateur</span>
+                        <span class="leaderboard-cell">Score</span>
+                    </div>
+
+                    <?php foreach ($otherUsers as $index => $user): ?>
+                        <?php
+                            // Le rang réel est l'index dans cette nouvelle boucle + 4 (car on a retiré les 3 premiers)
+                            $rank = $index + 4;
+                            $isCurrentUser = ($user['id'] == $currentUserId);
+                        ?>
+                        <div class="leaderboard-row <?php echo $isCurrentUser ? 'leaderboard-row--current-user' : ''; ?>">
+                            <span class="leaderboard-cell leaderboard-cell--rank">#<?php echo $rank; ?></span>
+                            <span class="leaderboard-cell leaderboard-cell--user"><?php echo htmlspecialchars($user['username']); ?></span>
+                            <span class="leaderboard-cell leaderboard-cell--score"><?php echo $user['score']; ?> pts</span>
+                        </div>
+                    <?php endforeach; ?>
+                </div>
+
             </div>
         </div>
     </main>
-
 </body>
 </html>
