--- a/templates/leaderboard-total.phtml
+++ b/templates/leaderboard-total.phtml
@@ -14,14 +14,7 @@
     <main class="content-container">
         <div class="content-wrapper">
 
-            <div class="content-header">
-                <i class="content-icon fas fa-trophy"></i>
-                <div class="content-title-group">
-                    <h1>Classement</h1>
-                    <p class="content-intro">Mesurez-vous à la communauté. Chaque drapeau capturé vous rapproche du sommet !</p>
-                </div>
-            </div>
-
+            <h2>Classement Général</h2>
             <div class="content-block">
 
                 <?php 
@@ -47,10 +40,8 @@
                                         <i class="podium-crown fas fa-crown"></i>
                                     <?php endif; ?>
 
-                                    <div class="podium-trophy">
-                                        <i class="fas fa-trophy"></i>
-                                    </div>
-
+                                    <img src="<?php echo htmlspecialchars($user['avatar_url'] ?? 'images/default-avatar.webp'); ?>" alt="Avatar de <?php echo htmlspecialchars($user['username']); ?>" class="podium-avatar">
+                                    
                                     <div class="podium-user"><?php echo htmlspecialchars($user['username']); ?></div>
                                     <div class="podium-score"><?php echo $user['score']; ?> pts</div>
                                     
