--- a/templates/partials/leaderboard-widget.phtml
+++ b/templates/partials/leaderboard-widget.phtml
@@ -90,7 +90,7 @@ foreach ($topUsers as $topUser) {
     <ul class="leaderboard-options">
         <li>
             <a href="/leaderboard">
-                <i class="fas fa-globe"></i> Classement général
+                <i class="fas fa-arrow-right"></i> Classement complet
             </a>
         </li>
     </ul>
