--- a/templates/reset-password.phtml
+++ b/templates/reset-password.phtml
@@ -16,7 +16,9 @@ $token = $_GET['token'] ?? '';
 </head>
 <body class="auth-page">
 
-    <a href="/" class="btn-glass back-button"><i class="fas fa-arrow-left" aria-hidden="true"></i>Retour à l'accueil</a>
+    <a href="/lessons" onclick="history.back(); return false;" class="btn-glass back-button">
+        <i class="fas fa-arrow-left" aria-hidden="true"></i> Retour
+    </a>
 
     <div class="auth-container">
         <div class="auth-content">
