--- a/templates/challenge-page.phtml
+++ b/templates/challenge-page.phtml
@@ -21,7 +21,9 @@
     else { $difficulty_class = 'difficulty-easy'; }
     ?>
 
-    <a href="/challenges" class="btn-glass back-button"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux challenges</a>
+    <a href="/lessons" onclick="history.back(); return false;" class="btn-glass back-button">
+        <i class="fas fa-arrow-left" aria-hidden="true"></i> Retour aux challenges
+    </a>
 
     <main class="content-container">
         <div class="content-wrapper">
